@@ -1,3 +1,14 @@
+2004-11-10  Mark D. Baushke  <mdb@cvshome.org>
+
+	* mktime.c (SHR): New macro, which is a portable substitute for >>
+	that should work even on Crays.
+	Problem reported by Mark D. Baushke.
+	(TIME_T_MIDPOINT, ydhms_diff, __mktime_internal): Use it.
+	(Patch from Paul Eggert of GNULIB.)
+
+	* Makefile.am (getdate_LDADD): Add @ALLOCA@.
+	* Makefile.in: Regenerated.
+
 2004-11-09  Mark D. Baushke  <mdb@cvshome.org>
 
 	* strftime.c: Update from GNULIB.
